# video-analyser-backend

./: .gitignore  README.md  TODO.md  agent_manager.py  ai_model_manager.py  configs.py  grpcserver.py  llm.py  main.py  multi_agent_coordinator.py  orchestrator.py  pyproject.toml  sample_env.txt  server.py  startup.py  todos.txt  tools.py
agents/: base_agent.py  generation_agent.py  reclarify_agent.py  transcription_agent.py  vision_agent.py
context/: __init__.py  video_context.py
documentation/: WINDOWS_OFFLINE_BUNDLE.md
models/: chat_history.py  orchestrator_models.py  task_models.py
protos/: video_analyzer.proto  video_analyzer_pb2.py  video_analyzer_pb2_grpc.py
services/: chat_history_service.py  chat_history_storage.py  file_storage.py
templates/: orchestrator_prompts.py  transcription_agent_prompts.py  vision_agent_prompts.py
utils/: logger.py  tool_runner.py
