[project]
name = "langgraph-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.21",
    "ipython>=8.37.0",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.1",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "ultralytics>=8.3.221",
]
